[gd_scene load_steps=33 format=2]

[ext_resource path="res://characters/enemies/slime/ Slime.gd" type="Script" id=1]
[ext_resource path="res://engine/Physics2D.gd" type="Script" id=2]
[ext_resource path="res://audio/death-screams/alien/sfx_deathscream_alien2.wav" type="AudioStream" id=3]
[ext_resource path="res://engine/Momentum.gd" type="Script" id=4]
[ext_resource path="res://characters/enemies/slime/slime-Sheet.png" type="Texture" id=5]
[ext_resource path="res://characters/enemies/slime/states/on-ground/idle.gd" type="Script" id=6]
[ext_resource path="res://characters/enemies/slime/states/on-ground/follow.gd" type="Script" id=7]
[ext_resource path="res://characters/enemies/slime/states/combat/attack.gd" type="Script" id=8]
[ext_resource path="res://characters/enemies/slime/DamageZoneKnockBack.gd" type="Script" id=9]
[ext_resource path="res://characters/enemies/slime/states/combat/getting-hit.gd" type="Script" id=10]
[ext_resource path="res://characters/enemies/slime/states/combat/death.gd" type="Script" id=11]
[ext_resource path="res://effects/Explosion.tscn" type="PackedScene" id=12]
[ext_resource path="res://characters/enemies/slime/HealtBoss.gd" type="Script" id=13]
[ext_resource path="res://audio/death-screams/alien/sfx_deathscream_alien5.wav" type="AudioStream" id=14]
[ext_resource path="res://characters/enemies/slime/states/on-ground/retreat.gd" type="Script" id=15]
[ext_resource path="res://audio/death-screams/alien/sfx_deathscream_alien6.wav" type="AudioStream" id=16]
[ext_resource path="res://audio/death-screams/alien/sfx_deathscream_alien1.wav" type="AudioStream" id=17]
[ext_resource path="res://effects/ExclamationPoint.tscn" type="PackedScene" id=18]

[sub_resource type="Animation" id=1]
resource_name = "Attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("States/Attack/DamageZone:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("States/Follow/DetectPlayer:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("States/Attack/BouncingZoneBoss:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("States/Attack/DamageZone:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("States/Follow/BouncingZoneBoss:monitoring")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("States/Retreat/BouncingZoneBoss:monitoring")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "GettingHit"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.0745098, 0.00392157, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Move"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Retreat"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 8, 3.25 )

[sub_resource type="GDScript" id=8]
script/source = "extends Area2D

# one-hit enemy
signal getting_hit
export(float) var amount := 25.0
export (float) var knockback_force_y := -650.0


func _init() -> void:
	set_collision_layer_bit(0, false)
	set_collision_mask_bit(0, false)
	set_collision_mask_bit(1, true)


func _ready():
	self.connect(\"body_entered\", self, \"_on_Body_enter\")


# Make the player bounce when colliding this zone
# @signal getting_kill - for the character with the bouncing zone
func _on_Body_enter(body: Player) -> void:
	if body.velocity.y > 0:
		body.controlled_jump = false
		body.velocity.y = knockback_force_y
		body._change_state(\"Jump\")
		owner.get_node('Health').take_damage(amount)
		emit_signal(\"getting_hit\")
"

[sub_resource type="CapsuleShape2D" id=9]
radius = 6.25
height = 5.5

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 9.3, 5.6 )

[sub_resource type="GDScript" id=11]
script/source = "extends Area2D

# one-hit enemy
signal getting_hit
export(float) var amount := 25.0
export (float) var knockback_force_y := -650.0


func _init() -> void:
	set_collision_layer_bit(0, false)
	set_collision_mask_bit(0, false)
	set_collision_mask_bit(1, true)


func _ready():
	self.connect(\"body_entered\", self, \"_on_Body_enter\")


# Make the player bounce when colliding this zone
# @signal getting_kill - for the character with the bouncing zone
func _on_Body_enter(body: Player) -> void:
	if body.velocity.y > 0:
		body.controlled_jump = false
		body.velocity.y = knockback_force_y
		body._change_state(\"Jump\")
		owner.get_node('Health').take_damage(amount)
		emit_signal(\"getting_hit\")
"

[sub_resource type="GDScript" id=12]
script/source = "extends Area2D

# one-hit enemy
signal getting_hit
export(float) var amount := 25.0
export (float) var knockback_force_y := -650.0


func _init() -> void:
	set_collision_layer_bit(0, false)
	set_collision_mask_bit(0, false)
	set_collision_mask_bit(1, true)


func _ready():
	self.connect(\"body_entered\", self, \"_on_Body_enter\")


# Make the player bounce when colliding this zone
# @signal getting_kill - for the character with the bouncing zone
func _on_Body_enter(body: Player) -> void:
	if body.velocity.y > 0:
		body.controlled_jump = false
		body.velocity.y = knockback_force_y
		body._change_state(\"Jump\")
		owner.get_node('Health').take_damage(amount)
		emit_signal(\"getting_hit\")
"

[sub_resource type="CapsuleShape2D" id=13]
radius = 10.1
height = 7.40004

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 9.2, 8.9 )

[node name="Slime" type="KinematicBody2D"]
scale = Vector2( 10, 10 )
collision_layer = 4
collision_mask = 5
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 1 )
anims/Death = SubResource( 2 )
anims/GettingHit = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Move = SubResource( 5 )
anims/Retreat = SubResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.125, 7.75 )
shape = SubResource( 7 )

[node name="Physics2D" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="DecisionTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="ExclamationPoint" parent="." instance=ExtResource( 18 )]
margin_left = -7.1
margin_top = -16.8
margin_right = 5.9
margin_bottom = -3.8
rect_scale = Vector2( 0.25, 0.25 )

[node name="Health" type="Node2D" parent="."]
script = ExtResource( 13 )

[node name="Momentum" type="Node2D" parent="Health"]
script = ExtResource( 4 )
DURATION = 0.75

[node name="States" type="Node2D" parent="."]

[node name="Idle" type="Node2D" parent="States"]
script = ExtResource( 6 )

[node name="Follow" type="Node2D" parent="States"]
script = ExtResource( 7 )
SPEED = 150.0
ACCELERATION = 0.1

[node name="BouncingZoneBoss" type="Area2D" parent="States/Follow"]
collision_layer = 0
collision_mask = 2
script = SubResource( 8 )
amount = 40.0
knockback_force_y = -500.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="States/Follow/BouncingZoneBoss"]
position = Vector2( 0.25, 3.25 )
rotation = 1.5708
shape = SubResource( 9 )

[node name="DetectPlayer" type="Area2D" parent="States/Follow"]
position = Vector2( -6.8, -0.9 )
monitoring = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="States/Follow/DetectPlayer"]
position = Vector2( 14.4, 6.3 )
shape = SubResource( 10 )

[node name="Retreat" type="Node2D" parent="States"]
script = ExtResource( 15 )
SPEED = 175.0
stream = ExtResource( 16 )

[node name="BouncingZoneBoss" type="Area2D" parent="States/Retreat"]
position = Vector2( -5, -0.3 )
collision_layer = 0
collision_mask = 2
script = SubResource( 11 )
amount = 40.0
knockback_force_y = -500.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="States/Retreat/BouncingZoneBoss"]
position = Vector2( 0.25, 3.25 )
rotation = 1.5708
shape = SubResource( 9 )

[node name="DetectPlayer" type="Area2D" parent="States/Retreat"]
position = Vector2( -6.8, -0.9 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="States/Retreat/DetectPlayer"]
position = Vector2( 14.4, 6.3 )
shape = SubResource( 10 )

[node name="Timer" type="Timer" parent="States/Retreat"]
one_shot = true

[node name="Attack" type="Node2D" parent="States"]
script = ExtResource( 8 )
stream = ExtResource( 17 )

[node name="BouncingZoneBoss" type="Area2D" parent="States/Attack"]
monitoring = false
collision_layer = 0
collision_mask = 2
script = SubResource( 12 )
amount = 40.0
knockback_force_y = -500.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="States/Attack/BouncingZoneBoss"]
position = Vector2( 3.4, 1 )
rotation = 1.5708
shape = SubResource( 13 )

[node name="DamageZone" type="Area2D" parent="States/Attack"]
position = Vector2( -128.6, 14.8 )
monitoring = false
collision_layer = 0
collision_mask = 2
script = ExtResource( 9 )
knockback_force = Vector2( 300, 300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="States/Attack/DamageZone"]
position = Vector2( 136.3, -12.7 )
shape = SubResource( 14 )

[node name="GettingHit" type="Node2D" parent="States"]
script = ExtResource( 10 )
stream = ExtResource( 3 )

[node name="Timer" type="Timer" parent="States/GettingHit"]
wait_time = 2.0
one_shot = true

[node name="Death" type="Node2D" parent="States"]
script = ExtResource( 11 )
stream = ExtResource( 14 )

[node name="Explosion" parent="States/Death" instance=ExtResource( 12 )]
visible = false
position = Vector2( -2.31964, -6.49501 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )
vframes = 3
hframes = 8
frame = 8
